# idatt2503

./: README.md
.github/workflows/: fuzzing.yml
crypto/task1/: k-shift-chiffer.py  task1.ipynb
crypto/task2/: task2.ipynb
crypto/task3/: task3.ipynb
crypto/task4/: task4.ipynb
task5/: CMakeLists.txt  format_string.c  main.c  main.cpp  replace_chars.c  utility.h
task5/tests/: CMakeLists.txt  utility_fuzzer_test.c  utility_test.c
task6/ex1/: password-cracker.js
task6/ex2/: crypto-server.js  index.html  webclient.js
